# codr

./: .gitignore  .pre-commit-config.yaml  .pricing.idea  README.md  main.py  pyproject.toml  test.sh
.context/: tree.yaml
codeio/: codebase.py  tree.py
codr/: __main__.py  codebase.py  tree.py
codr/codebase/: func.py  tree.py
codr/llm/: chains.py  chat.py  schema.py  scripts.py  templates.py  union_type_router.todo
codr/llm/chains/: __init__.py  chat_agent.py  commit.py  debug.py  expert_answer.py  files.py  other.py  task.py
funcchain/: compress.todo  config.py  parser.py  shortcuts.py  utils.py
llm/: chains.py  schema.py  scripts.py  templates.py
src/backend/: __main__.py  core.py  session.py  ui.py
src/backend/codebase/: __init__.py  interface.py  tree.py
src/backend/commands/: __init__.py  ask.py  chat.todo  commit.py  debug.py  implement.py
src/cli/: codebase_local.py  codebase_tree_local.py  main.py
src/client/: __main__.py  cli.py  codebase.py  typing_stream.py  wsconnect.py
src/codr/: __init__.py  __main__.py  _chat_old.py  chat.py  cli.py  schema.py  schemas.py  ui.py  utils.py
src/codr/_deprecated/: __init__.py  chat_agent.py  files.py  other.py  task.py
src/codr/cli/: cli.py  codebase_local.py  main.py
src/codr/codebase/: func.py  tree.py
src/codr/codebase/_tree/: __init__.py  file.py  node.py
src/codr/codebase/tree/: __init__.py  file.py  ignore.py  node.py
src/codr/commands/: __init__.py  ask.py  chat.py  chat.todo  check.py  commit.py  cron_jobs.py  debug.py  implement.py  interpreter.py  shell.py  terminal.todo
src/codr/llm/: schema.py  scripts.py
src/codr/llm/chains/: chat_agent.py  commit.py  debug.py  expert_answer.py  files.py  task.py
src/shared/: codebase_interface.py  schemas.py
src/shared/codebase/: clientio.py  core.py  func.py  git.py  new_tree.py  tree.py
src/shared/codebase/_tree/: __init__.py  file.py  ignore.py  node.py
src/shared/codebase/local/: __init__.py  codebase.py
src/shared/schemas/: __init__.py  actions.py  prompting.py  websocket.py
tests/: fix_codebases_test.py  utils.py
tests/codebases/examples/fix_fastapi/: main.py
tests/codebases/examples/fix_random_numbers/: main.py
tests/codebases/examples/fix_string/: main.py
tests/codebases/solutions/fix_fastapi/: main.py
