[project]
name = "codr"
version = "0.0.1"
description = "Codr is an ai tool for faster coding."
authors = [
    { name = "Shroominic", email = "contact@shroominic.com" }
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6",
    "aiofiles>=23",
    "emoji>=2",
    "funcchain>=0.1.9",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
codr = 'src.codr.__main__:app'

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.3",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
    "pytest>=7.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests/codebases/*"
