[project]
name = "codr"
version = "0.0.1"
description = "Codr is an ai tool for faster coding."
authors = [
    { name = "Shroominic", email = "contact@shroominic.com" }
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6",
    "aiofiles>=23",
    "emoji>=2",
    "funcchain>=0.1.9",
    "inquirerpy>=0.3.4",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "websockets>=12.0",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
codr = 'codr.__main__:app'
chatr = 'codr.chat:chat'

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.3",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
    "pytest>=7.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codr"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests/codebases/*"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
